[package]
name = "space_rpg"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.21.0", features = ["derive"] }
lazy_static = "1.4.0"
f128 = "0.2.9"

[dev-dependencies]
rand = "0.8.4"
